# bliinks-idp

./: .gitignore  Cargo.toml  LICENSE  README.md  example.toml
docs/: oauth-integration-guide.md
migrations/: 0001_init.sql  0002_invites.sql
src/: cfg.rs  error.rs  helpers.rs  main.rs  middleware.rs  rbac.rs  render.rs  session.rs
src/db/: mod.rs  models.rs  oauth_queries.rs  queries.rs
src/oauth/: mod.rs  scopes.rs  token.rs
src/routes/: admin.rs  auth.rs  avatar.rs  captcha.rs  error.rs  index.rs  mod.rs  oauth.rs  security.rs  serve.rs  settings.rs  user.rs
static/: admin.js  captcha.js  global.css
templates/: admin.html  authorize.html  base.html  error.html  index.html  login.html  profile.html  register.html  reset.html  security.html  settings.html
templates/auth/: authorize.html  login.html  register.html  reset.html
templates/partials/: footer.html  header.html
