[package]
name    = "bliinks-idp"
version = "0.1.0"
edition = "2021"
default-run = "bliinks-idp"

[[bin]]
name = "migrate_legacy"
path = "src/bin/migrate_legacy.rs"

[[bin]]
name = "seed_rbac"
path = "src/bin/seed_rbac.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tera = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "timeout"] }
governor = "0.6"
tower_governor = { version = "0.4", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
thiserror = "1"
config = "0.15"
tower = { version = "0.5", features = ["util"] }
yaptcha = "0.1.0"
base64 = "0.22"
urlencoding = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
gif   = "0.13"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
